feat(docs): scaffold Nuxt docs site and CI gates (nuxt-openfeature-wby.1)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,9 @@ jobs:
         run: pnpm test
       - name: Build
         run: pnpm build
+      - name: Docs Lint
+        run: pnpm docs:lint
+      - name: Docs Typecheck
+        run: pnpm docs:typecheck
+      - name: Docs Build
+        run: pnpm docs:build
