--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "scripts": {
     "dev": "pnpm --dir playground dev",
+    "docs:dev": "pnpm --dir docs dev",
+    "docs:lint": "pnpm exec eslint docs --config eslint.config.mjs",
+    "docs:typecheck": "pnpm --dir docs typecheck",
+    "docs:build": "pnpm --dir docs build",
     "lint": "eslint .",
     "typecheck": "tsc --noEmit -p tsconfig.json",
     "test": "vitest run",
